[gd_scene load_steps=16 format=3 uid="uid://8x0u4861vh42"]

[ext_resource type="Script" path="res://Frame.gd" id="1_vqx33"]
[ext_resource type="StyleBox" uid="uid://1wu8qb0cq3hr" path="res://theme/FlashingSelector.tres" id="2_8yoyx"]
[ext_resource type="Shader" path="res://resolution_and_palette.gdshader" id="2_n1wd1"]
[ext_resource type="PackedScene" uid="uid://bcndodfefewom" path="res://scenes/OmniLight.tscn" id="3_qnofb"]
[ext_resource type="Script" path="res://Mouse3D.gd" id="5_t70l5"]
[ext_resource type="Texture2D" uid="uid://kj6s5uokk6lc" path="res://creature_palette.png" id="6_woeij"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofy8m"]
bg_color = Color(0, 0, 0, 0.333333)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.666667)

[sub_resource type="Animation" id="Animation_t0k3b"]
resource_name = "Flash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.307786, 3.01127, 194.013),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.5, 0.5, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jx5lb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gx3kd"]
_data = {
"Flash": SubResource("Animation_t0k3b"),
"RESET": SubResource("Animation_jx5lb")
}

[sub_resource type="Environment" id="Environment_2g3mq"]
background_energy_multiplier = 0.0
ambient_light_source = 2
tonemap_mode = 3
ssr_max_steps = 1
ssao_enabled = true
fog_light_color = Color(0.509804, 0.215686, 0.439216, 1)
fog_light_energy = 3.15
adjustment_contrast = 0.26
adjustment_saturation = 0.01

[sub_resource type="World3D" id="World3D_xlr5x"]
environment = SubResource("Environment_2g3mq")

[sub_resource type="ViewportTexture" id="ViewportTexture_oktmd"]

[sub_resource type="SphereMesh" id="SphereMesh_ybfbg"]
radius = 1.0
height = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ljxyn"]
shader = ExtResource("2_n1wd1")
shader_parameter/sobel_intensity = 1.0
shader_parameter/sobel_threshold = 1.5
shader_parameter/dither_strength = 0.05
shader_parameter/adjust_dark = null
shader_parameter/outline_color = Color(1, 0, 0, 1)
shader_parameter/outline_intensity = 0.0
shader_parameter/palette_image = ExtResource("6_woeij")

[node name="Frame" type="PanelContainer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ofy8m")
script = ExtResource("1_vqx33")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="FlashingSelector" type="PanelContainer" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_8yoyx")

[node name="FlashingSelectorAnimation" type="AnimationPlayer" parent="AspectRatioContainer/FlashingSelector"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gx3kd")
}
autoplay = "Flash"

[node name="BackgroundColour" type="ColorRect" parent="AspectRatioContainer/FlashingSelector"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.37, 0.37, 0.37, 1)

[node name="DisplayFrameUi" type="TextureRect" parent="AspectRatioContainer/FlashingSelector"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="PosingContainer" type="SubViewportContainer" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ModelViewport" type="SubViewport" parent="AspectRatioContainer"]
unique_name_in_owner = true
own_world_3d = true
world_3d = SubResource("World3D_xlr5x")
transparent_bg = true
vrs_texture = SubResource("ViewportTexture_oktmd")
canvas_item_default_texture_filter = 0
physics_object_picking = true
size = Vector2i(254, 254)
render_target_update_mode = 0

[node name="Field" type="Node3D" parent="AspectRatioContainer/ModelViewport"]
unique_name_in_owner = true

[node name="Lights" type="Node3D" parent="AspectRatioContainer/ModelViewport"]
unique_name_in_owner = true

[node name="OmniLight3D1" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D2" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D3" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D4" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D5" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D6" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D7" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D8" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="OmniLight3D9" parent="AspectRatioContainer/ModelViewport/Lights" instance=ExtResource("3_qnofb")]
visible = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="AspectRatioContainer/ModelViewport"]
rotation_order = 0
top_level = true
visible = false
shadow_enabled = true
shadow_opacity = 0.0

[node name="CameraRotationY" type="Node3D" parent="AspectRatioContainer/ModelViewport"]
unique_name_in_owner = true

[node name="CameraRotationX" type="Node3D" parent="AspectRatioContainer/ModelViewport/CameraRotationY"]
unique_name_in_owner = true

[node name="CameraClip" type="Node3D" parent="AspectRatioContainer/ModelViewport/CameraRotationY/CameraRotationX"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 24)

[node name="Camera3D" type="Camera3D" parent="AspectRatioContainer/ModelViewport/CameraRotationY/CameraRotationX/CameraClip"]
unique_name_in_owner = true
projection = 1
size = 40.0

[node name="Mouse3D" type="Node3D" parent="AspectRatioContainer/ModelViewport"]
visible = false
script = ExtResource("5_t70l5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AspectRatioContainer/ModelViewport/Mouse3D"]
visible = false
mesh = SubResource("SphereMesh_ybfbg")

[node name="EffectsViewport" type="SubViewport" parent="AspectRatioContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(254, 254)
render_target_update_mode = 0

[node name="EffectsViewportSprite" type="Sprite2D" parent="AspectRatioContainer/EffectsViewport"]
unique_name_in_owner = true
z_index = 2
texture_filter = 1
material = SubResource("ShaderMaterial_ljxyn")
centered = false

[node name="FinalTrimmedViewport" type="SubViewport" parent="AspectRatioContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(254, 254)
render_target_update_mode = 0

[node name="BackgroundColour2" type="ColorRect" parent="AspectRatioContainer/FinalTrimmedViewport"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37, 0.115426, 0.267948, 1)

[node name="FinalTrimmedViewportSprite" type="Sprite2D" parent="AspectRatioContainer/FinalTrimmedViewport"]
unique_name_in_owner = true
z_index = 3
texture_filter = 1
centered = false

[node name="SelectableArea" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[connection signal="gui_input" from="AspectRatioContainer/PosingContainer" to="." method="_on_posing_container_gui_input"]
[connection signal="gui_input" from="AspectRatioContainer/SelectableArea" to="." method="_on_selectable_area_gui_input"]
